{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 7,
  "lineage": "58450ef8-5099-0060-a705-6757391144ad",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-06a03322ef46c5cff",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-http-sg"
                ]
              }
            ],
            "id": "sg-06a03322ef46c5cff",
            "name": "prod-ivy-http-sg",
            "tags": {
              "Name": "prod-ivy-http-sg"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:security-group/sg-03a466018db8b4f0b",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-https-sg"
                ]
              }
            ],
            "id": "sg-03a466018db8b4f0b",
            "name": "prod-ivy-https-sg",
            "tags": {
              "Name": "prod-ivy-https-sg"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0e898dbbb445b3f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "20.10.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-1a"
                ]
              }
            ],
            "id": "subnet-0e898dbbb445b3f89",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "prod-ivy-1a"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09815e7706a7d215a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "20.10.2.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-1c"
                ]
              }
            ],
            "id": "subnet-09815e7706a7d215a",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "prod-ivy-1c"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09d426d226d63de9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "20.10.3.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy-1d"
                ]
              }
            ],
            "id": "subnet-09d426d226d63de9e",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "prod-ivy-1d"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:vpc/vpc-0c375c2ac738dcd6d",
            "cidr_block": "20.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f54544217f08966e",
                "cidr_block": "20.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-3233cf55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "prod-ivy"
                ]
              }
            ],
            "id": "vpc-0c375c2ac738dcd6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-084da4ce05ff73757",
            "owner_id": "198098511860",
            "state": "available",
            "tags": {
              "Name": "prod-ivy"
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "prod-ivy-alb-log",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/prod-ivy/d53b924ef48ef5dd",
            "arn_suffix": "app/prod-ivy/d53b924ef48ef5dd",
            "dns_name": "prod-ivy-1042874948.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/prod-ivy/d53b924ef48ef5dd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-ivy",
            "security_groups": [
              "sg-03a466018db8b4f0b",
              "sg-06a03322ef46c5cff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09815e7706a7d215a"
              },
              {
                "subnet_id": "subnet-09d426d226d63de9e"
              },
              {
                "subnet_id": "subnet-0e898dbbb445b3f89"
              }
            ],
            "subnets": [
              "subnet-09815e7706a7d215a",
              "subnet-09d426d226d63de9e",
              "subnet-0e898dbbb445b3f89"
            ],
            "vpc_id": "vpc-0c375c2ac738dcd6d",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/prod-ivy/d53b924ef48ef5dd/ac4569d47a4822ad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/prod-ivy/d53b924ef48ef5dd/ac4569d47a4822ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/prod-ivy/d53b924ef48ef5dd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/prod-ivy/d53b924ef48ef5dd/7e8982a733bc1f73",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:198098511860:certificate/13e83070-3aea-4870-aebe-0f289ba7c82a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:listener/app/prod-ivy/d53b924ef48ef5dd/7e8982a733bc1f73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:198098511860:loadbalancer/app/prod-ivy/d53b924ef48ef5dd",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.this"
          ]
        }
      ]
    }
  ]
}